# agriedge

./: CMakeLists.txt  README.md  package.xml
config/: display.rviz  gz_bridge.yaml  joint_names_robot_urdf.yaml  my_controllers.yaml
launch/: display.launch.py  rsp.launch.py  sim.launch.py
meshes/: AR_D_Link.STL  AR_G_Link.STL  AV_D_Link.STL  AV_G_Link.STL  cam_Link.STL  camnav_Link.STL  lidar_Link.STL
urdf/: agriedge.xacro  gz_plugins.xacro  materials.xacro  robot_urdf.csv  robot_urdf.urdf  ros2_control.xacro
world/: agriedge_empty.sdf
